<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <!-- Items dels menús de l'ActionBar -->
    <string name="app_name">RequestTube</string>
    <string name="title_activity_request">RequestTube</string>
    <string name="actionAfegir">Afegir</string>

    <!-- RequestTubeActivity -->
    <string name="search_menu_item">Cercar</string>
    <string name="tvConsulta">Consulta</string>
    <string name="etConsulta">escriu &#8230;</string>
    <string name="tvCategoriaId">Categoria</string>
    <string name="tvOrderBy">Ordre</string>
    <string name="tvNumItems">Vídeos</string>
    <string name="action_settings">Settings</string>
	<string name="prefered_menu_item">Llista de preferits</string>
	
		<!-- Elements adapters dels Spinners de RequestTube -->
		<!-- Order By -->
		<string name="relevance">""</string>
		<string name="date"></string>
		<string name="viewCount"></string>
		<string name="rating"></string>
		
		
	<!-- RequestTube List Search -->
    <string name="title_activity_list">Llista de videos</string>
    
    <!-- Youtube Player Activity -->
    <string name="title_activity_youtube_player">RequestTube Player</string>
    <string name="tvTitleActionBarYoutubePlayer">RequestTube Player</string>
    <string name="title_activity_prefered_list">Preferits RequestTube</string>
    <string name="afegir_a_llista">Afegeix als preferits</string>
    

</resources>
