<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    android:paddingLeft="5dp" >

    <!-- CONSULTA -->

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >


        <EditText
            android:id="@+id/etConsulta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:inputType="text"
            android:hint="@string/etConsulta" />
        
        <ImageView
            android:id="@+id/requestTube"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:src="@android:drawable/ic_menu_search"
            android:background="@drawable/button_state"
            android:contentDescription="@string/app_name"
            android:onClick="requestTube" />
        
        
    </LinearLayout>

    <!-- CATEGORIA DELS VÍDEOS -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvCategoriaId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/tvCategoriaId"
            android:textColor="#3CC0FA"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <Spinner
            android:id="@+id/spinnerCategoriaId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6" />
    </LinearLayout>

    <!-- ORDENAT PER -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvOrderBy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/tvOrderBy"
            android:textColor="#3CC0FA"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <Spinner
            android:id="@+id/spinnerOrderBy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6" />
    </LinearLayout>

    <!-- NÚMERO ITEMS CERCA -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvNumItems"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/tvNumItems"
            android:textColor="#3CC0FA"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <Spinner
            android:id="@+id/spinnerNumItems"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:textAlignment="center" >

        
        
    </LinearLayout>

</LinearLayout>